// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createNewProject > assets 1`] = `
[
  ".dockerignore",
  ".editorconfig",
  ".gitattributes",
  ".github/FUNDING.yml",
  ".github/ISSUE_TEMPLATE/bug_report.yml",
  ".github/ISSUE_TEMPLATE/config.yml",
  ".github/workflows/ci.yml",
  ".github/workflows/release.yml",
  ".husky/commit-msg",
  ".husky/pre-commit",
  ".husky/pre-push",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  "AGENTS.md",
  "CODE_OF_CONDUCT.md",
  "commitlint.config.ts",
  "CONTRIBUTING.md",
  "Dockerfile",
  "eslint.config.js",
  "gitignore",
  "LICENSE",
  "lint-staged.config.js",
  "netlify.toml",
  "package.json",
  "pnpm-workspace.yaml",
  "renovate.json",
  "repoctl.config.ts",
  "SECURITY.md",
  "stylelint.config.js",
  "tsconfig.json",
  "turbo.json",
  "vitest.config.ts",
]
`;

exports[`createNewProject > createNewProject demo cli case 1`] = `
[
  ".gitignore",
  "bin/index.js",
  "dev/index.ts",
  "package.mock.json",
  "src/cli.ts",
  "src/index.ts",
  "tsconfig.json",
  "tsdown.config.ts",
]
`;

exports[`createNewProject > createNewProject demo client case 1`] = `
[
  ".gitignore",
  "AGENTS.md",
  "eslint.config.js",
  "index.html",
  "package.mock.json",
  "public/vite.svg",
  "src/App.vue",
  "src/main.ts",
  "src/pages/index.vue",
  "src/query-keys.ts",
  "src/router/index.ts",
  "src/stores/i18n.ts",
  "src/stores/index.ts",
  "src/style.css",
  "src/trpc/index.ts",
  "src/vite-env.d.ts",
  "tsconfig.app.json",
  "tsconfig.json",
  "tsconfig.node.json",
  "tsconfig.worker.json",
  "vite.config.ts",
  "worker-configuration.d.ts",
  "worker/app.ts",
  "worker/config.ts",
  "worker/fetch-entry.ts",
  "worker/node-entry.ts",
  "worker/trpc-router.ts",
  "wrangler.jsonc",
]
`;

exports[`createNewProject > createNewProject demo default case 1`] = `
[
  "package.mock.json",
  "src/index.ts",
  "test-d/index.test-d.ts",
  "test/index.test.ts",
  "tsconfig.json",
  "tsdown.config.ts",
  "vitest.config.ts",
]
`;

exports[`createNewProject > createNewProject demo server case 1`] = `
[
  ".gitignore",
  "eslint.config.js",
  "package.mock.json",
  "src/app.ts",
  "src/config.ts",
  "src/fetch-entry.ts",
  "src/node-entry.ts",
  "test/index.test.ts",
  "tsconfig.json",
  "tsconfig.worker.json",
  "tsdown.config.ts",
  "vitest.config.ts",
  "worker-configuration.d.ts",
  "wrangler.jsonc",
]
`;

exports[`createNewProject > createNewProject demo vue-ui case 1`] = `
[
  ".gitignore",
  "eslint.config.js",
  "package.mock.json",
  "src/HelloWorld.vue",
  "src/index.ts",
  "src/vite-env.d.ts",
  "test-d/index.test-d.ts",
  "test/index.test.ts",
  "tsconfig.app.json",
  "tsconfig.json",
  "tsconfig.node.json",
  "tsconfig.test.json",
  "vite.config.ts",
  "vite.shared.config.ts",
  "vitest.config.ts",
]
`;

exports[`createNewProject > createNewProject demo website case 1`] = `
[
  ".gitignore",
  ".vitepress/config.ts",
  ".vitepress/theme/index.ts",
  ".vitepress/theme/tailwind.css",
  "ai/index.md",
  "ai/llms-txt.md",
  "getting-started.md",
  "index.md",
  "knowledge/index.md",
  "monorepo/commands.md",
  "monorepo/index.md",
  "monorepo/manage.md",
  "monorepo/publish.md",
  "monorepo/templates.md",
  "monorepo/troubleshooting.md",
  "package.mock.json",
  "public/_redirects",
  "public/logo.jpg",
  "repoctl/adopt-existing.md",
  "repoctl/aliases.md",
  "repoctl/checks.md",
  "repoctl/commands.md",
  "repoctl/config.md",
  "repoctl/doctor.md",
  "repoctl/execution-model.md",
  "repoctl/getting-started.md",
  "repoctl/index.md",
  "repoctl/reports.md",
  "repoctl/scenarios.md",
  "repoctl/template-assets.md",
  "repoctl/templates.md",
  "repoctl/troubleshooting.md",
  "repoctl/workflows.md",
  "thinking.md",
  "tools/changeset.md",
  "tools/husky.md",
  "tools/index.md",
  "tools/lint-staged.md",
  "tools/llms-txt.md",
  "tools/pnpm.md",
  "tools/renovate.md",
  "tools/turborepo.md",
  "tsconfig.json",
  "why/assets/npm-dt.svg",
  "why/assets/npm-ts.svg",
  "why/examples/0.npm-basic-package/index.js",
  "why/examples/0.npm-basic-package/package.json",
  "why/examples/1.npm-basic-package/index.cjs",
  "why/examples/1.npm-basic-package/index.d.ts",
  "why/examples/1.npm-basic-package/index.js",
  "why/examples/1.npm-basic-package/package.json",
  "why/examples/2.npm-basic-package/package-lock.json",
  "why/examples/2.npm-basic-package/package.json",
  "why/examples/2.npm-basic-package/README.md",
  "why/examples/2.npm-basic-package/rename-ext.js",
  "why/examples/2.npm-basic-package/src/index.ts",
  "why/examples/2.npm-basic-package/tsconfig.cjs.json",
  "why/examples/2.npm-basic-package/tsconfig.esm.json",
  "why/examples/2.npm-basic-package/tsconfig.json",
  "why/examples/3.npm-basic-package/package-lock.json",
  "why/examples/3.npm-basic-package/package.json",
  "why/examples/3.npm-basic-package/README.md",
  "why/examples/3.npm-basic-package/src/index.ts",
  "why/examples/3.npm-basic-package/tsconfig.json",
  "why/examples/3.npm-basic-package/tsdown.config.ts",
  "why/examples/usage-cjs/cjs.cjs",
  "why/examples/usage-cjs/esm.mjs",
  "why/examples/usage-cjs/index.js",
  "why/examples/usage-cjs/package-lock.json",
  "why/examples/usage-cjs/package.json",
  "why/examples/usage-esm/cjs.cjs",
  "why/examples/usage-esm/createRequire.js",
  "why/examples/usage-esm/esm.mjs",
  "why/examples/usage-esm/index.js",
  "why/examples/usage-esm/package-lock.json",
  "why/examples/usage-esm/package.json",
  "why/how-to-reuse-js-code.md",
  "why/index.md",
  "why/js-cjs-mjs.md",
  "why/js-keywords.md",
  "why/modern/bundlers.md",
  "why/modern/dts.md",
  "why/modern/esm-vs-cjs.md",
  "why/modern/index.md",
  "why/modern/package-entry-points.md",
  "why/modern/typescript.md",
  "why/publish-basic-npm-package.md",
  "why/what-is-npm-package.md",
  "wrangler.jsonc",
  "zh/ai/index.md",
  "zh/ai/llms-txt.md",
  "zh/getting-started.md",
  "zh/index.md",
  "zh/knowledge/index.md",
  "zh/monorepo/commands.md",
  "zh/monorepo/index.md",
  "zh/monorepo/manage.md",
  "zh/monorepo/publish.md",
  "zh/monorepo/templates.md",
  "zh/monorepo/troubleshooting.md",
  "zh/repoctl/adopt-existing.md",
  "zh/repoctl/aliases.md",
  "zh/repoctl/checks.md",
  "zh/repoctl/commands.md",
  "zh/repoctl/config.md",
  "zh/repoctl/doctor.md",
  "zh/repoctl/execution-model.md",
  "zh/repoctl/getting-started.md",
  "zh/repoctl/index.md",
  "zh/repoctl/reports.md",
  "zh/repoctl/scenarios.md",
  "zh/repoctl/template-assets.md",
  "zh/repoctl/templates.md",
  "zh/repoctl/troubleshooting.md",
  "zh/repoctl/workflows.md",
  "zh/thinking.md",
  "zh/tools/changeset.md",
  "zh/tools/husky.md",
  "zh/tools/index.md",
  "zh/tools/lint-staged.md",
  "zh/tools/llms-txt.md",
  "zh/tools/pnpm.md",
  "zh/tools/renovate.md",
  "zh/tools/turborepo.md",
  "zh/why/assets/npm-dt.svg",
  "zh/why/assets/npm-ts.svg",
  "zh/why/examples/0.npm-basic-package/index.js",
  "zh/why/examples/0.npm-basic-package/package.json",
  "zh/why/examples/1.npm-basic-package/index.cjs",
  "zh/why/examples/1.npm-basic-package/index.d.ts",
  "zh/why/examples/1.npm-basic-package/index.js",
  "zh/why/examples/1.npm-basic-package/package.json",
  "zh/why/examples/2.npm-basic-package/package-lock.json",
  "zh/why/examples/2.npm-basic-package/package.json",
  "zh/why/examples/2.npm-basic-package/README.md",
  "zh/why/examples/2.npm-basic-package/rename-ext.js",
  "zh/why/examples/2.npm-basic-package/src/index.ts",
  "zh/why/examples/2.npm-basic-package/tsconfig.cjs.json",
  "zh/why/examples/2.npm-basic-package/tsconfig.esm.json",
  "zh/why/examples/2.npm-basic-package/tsconfig.json",
  "zh/why/examples/3.npm-basic-package/package-lock.json",
  "zh/why/examples/3.npm-basic-package/package.json",
  "zh/why/examples/3.npm-basic-package/README.md",
  "zh/why/examples/3.npm-basic-package/src/index.ts",
  "zh/why/examples/3.npm-basic-package/tsconfig.json",
  "zh/why/examples/3.npm-basic-package/tsdown.config.ts",
  "zh/why/examples/usage-cjs/cjs.cjs",
  "zh/why/examples/usage-cjs/esm.mjs",
  "zh/why/examples/usage-cjs/index.js",
  "zh/why/examples/usage-cjs/package-lock.json",
  "zh/why/examples/usage-cjs/package.json",
  "zh/why/examples/usage-esm/cjs.cjs",
  "zh/why/examples/usage-esm/createRequire.js",
  "zh/why/examples/usage-esm/esm.mjs",
  "zh/why/examples/usage-esm/index.js",
  "zh/why/examples/usage-esm/package-lock.json",
  "zh/why/examples/usage-esm/package.json",
  "zh/why/how-to-reuse-js-code.md",
  "zh/why/index.md",
  "zh/why/js-cjs-mjs.md",
  "zh/why/js-keywords.md",
  "zh/why/modern/bundlers.md",
  "zh/why/modern/dts.md",
  "zh/why/modern/esm-vs-cjs.md",
  "zh/why/modern/index.md",
  "zh/why/modern/package-entry-points.md",
  "zh/why/modern/typescript.md",
  "zh/why/publish-basic-npm-package.md",
  "zh/why/what-is-npm-package.md",
]
`;

exports[`createNewProject > upgradeMonorepo 1`] = `
[
  ".dockerignore",
  ".editorconfig",
  ".gitattributes",
  ".github/FUNDING.yml",
  ".github/ISSUE_TEMPLATE/bug_report.yml",
  ".github/ISSUE_TEMPLATE/config.yml",
  ".github/workflows/ci.yml",
  ".github/workflows/release.yml",
  ".gitignore",
  ".husky/commit-msg",
  ".husky/pre-commit",
  ".husky/pre-push",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  "AGENTS.md",
  "CODE_OF_CONDUCT.md",
  "commitlint.config.ts",
  "CONTRIBUTING.md",
  "Dockerfile",
  "eslint.config.js",
  "LICENSE",
  "lint-staged.config.js",
  "netlify.toml",
  "pnpm-workspace.yaml",
  "renovate.json",
  "repoctl.config.ts",
  "SECURITY.md",
  "stylelint.config.js",
  "tsconfig.json",
  "turbo.json",
  "vitest.config.ts",
]
`;
